force-app/main/default/objects/Education__c/Education__c.object-meta.xml
<CustomObject>
    <label>Education</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Education Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Educations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>