force-app/main/default/objects/Education__c/fields/Accrediting_Body__c.field-meta.xml
<CustomField>
    <fullName>Accrediting_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accrediting Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>