force-app/main/default/objects/Education__c/fields/Clinical_Education__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Education</label>
    <type>Checkbox</type>
</CustomField>