force-app/main/default/objects/Education__c/fields/Country_of_Institution__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Institution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country of Institution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>