force-app/main/default/objects/Education__c/fields/End_Year__c.field-meta.xml
<CustomField>
    <fullName>End_Year__c</fullName>
    <label>End_Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>