force-app/main/default/objects/Education__c/fields/Medical_Degree__c.field-meta.xml
<CustomField>
    <fullName>Medical_Degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Degree</label>
    <type>Checkbox</type>
</CustomField>