force-app/main/default/objects/Education__c/fields/Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Year__c</fullName>
    <label>Start_Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>