force-app/main/default/objects/Education__c/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Date</label>
    <type>Date</type>
</CustomField>