force-app/main/default/objects/Education__c/fields/Verification_Source__c.field-meta.xml
<CustomField>
    <fullName>Verification_Source__c</fullName>
    <label>Verification Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>University Records</fullName>
            </value>
            <value>
                <fullName>Licensing Authority</fullName>
            </value>
            <value>
                <fullName>Third-Party Verification</fullName>
            </value>
            <value>
                <fullName>Self-Declared</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>